# Projekt-Podstawy-Informatyki

./: .gitignore  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Input.cpp  Input.h  Level.cpp  Level.h  Physics.h  Platform.h  Player.cpp  Player.h  README.md  lib.h  main.cpp  project.cpp
.cache/clangd/index/: main.cpp.662E40C36530183B.idx
fonts/thewitcher-font/: info.txt
levels/: level1.txt
settings/: settings.txt
src/: Enemy.cpp  Enemy.h  Game.cpp  Game.h  Input.cpp  Input.h  Level.cpp  Level.h  PathUtils.cpp  PathUtils.h  Physics.cpp  Platform.cpp  Platform.h  Player.cpp  Player.h  Settings.cpp  Settings.h  UI.cpp  UI.h  lib.h
